# DiSSECT

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  LICENSE  README.md  curve_handler.sage  definitions.py  division_early_abort  params  params.py  pyproject.toml  requirements.txt  setup.py  simulations.ipynb  tests_structures.py
.github/workflows/: docker.yml
curve_analyzer/: definitions.py
curve_analyzer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
curve_analyzer/misc/: simulations.py
curve_analyzer/tests/: Untitled.ipynb  default.params  example_curves.py  gen_params.py  gen_test_structures.py  (+10 more)
dissect/: definitions.py
docs/: howto_create_test  howto_create_trait  test_overview.txt  trait_descriptions.md
filters/: ord_to_name.json
results/: a12.json  a12.txt  a12_old.txt  a12_test.json  a12_test.txt  a2.txt  a4.json  a4.txt
tests/: a02_cm_disc_factorizations.sage  a04_near_order_factorizations.py  a04_near_order_factorizations.sage  a05_torsion_extensions.sage  a1.ipynb  a12_orders_of_small_primes_modulo_curve_order.ipynb  a12_orders_of_small_primes_modulo_curve_order.py  a12_orders_of_small_primes_modulo_curve_order.sage  a23_volcano.sage  a24_isogeny_extensions.py  a24_isogeny_extensions.sage  a25_trace_factorization.sage  a4_near_order_factorizations.ipynb  a5_find_torsion.ipynb  a5_k1k2.ipynb  curve_handler.py  s1_scalar_mult.ipynb  test_interface.py  test_interface.sage  test_launcher.ipynb  test_overview.txt  testing.sage
utils/: curve_handler.py  custom_curve.py  json_handler.py
web/: app.py  requirements.txt  run.sh
(+521 files in other folders)
