[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "dissect"
version = "0.4.0"
description = "Distinguisher of Standard & Simulated Elliptic Curves through Traits."
authors = [
    {name = "Vladimír Sedláček", email = "vlada.sedlacek@mail.muni.cz"},
    {name = "Vojtěch Suchánek"},
    {name = "Antonín Dufka"},
]
readme = "README.md"
license = {text = "MIT License"}
requires-python = ">=3.8"
dependencies = [
    "pathlib==1.0.1",
    "pymongo==4.6.3",
    "pandas==2.0.3",
    "scikit-learn==1.3.0",
    "plotly==5.15.0",
    "nbformat>=4.2.0",
]

[project.urls]
Homepage = "https://dissect.crocs.fi.muni.cz/"
Repository = "https://github.com/crocs-muni/DiSSECT.git"

[project.scripts]
dissect-database = "dissect.utils.database_handler:main"
dissect-compute-db = "dissect.utils.compute_db:main"
dissect-compute-json = "dissect.utils.compute_json:main"
dissect-feature_builder = "dissect.analysis.feature_builder:main"
dissect-feature_outliers = "dissect.analysis.feature_outliers:main"
dissect-feature_clusters = "dissect.analysis.feature_clusters:main"
dissect-feature_detail = "dissect.analysis.feature_detail:main"

[tool.setuptools.package-data]
"dissect.utils.kohel.mod" = ["*.dbz"]
